@@ -5,3 +5,6 @@
 - Rework how sequential gestures are counted
 	This fixes the problem with diagonal swipes triggering a lot of stuff
 	simultaneously
+- Make other gestures reversible, not just cardinals
+	So now you can rotate in one direction, in other, and then in the first
+	direction again, without lifting your fingers
